--- a/demo/demo.less
+++ b/demo/demo.less
@@ -30,6 +30,16 @@ a {
     overflow-x: hidden;
 }
 
+.btn-primary {
+    border: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    &:hover,
+    &:focus {
+        background: @color-1-hover;
+    }
+}
+
 .table-wrapper {
     width: 100%;
     max-width: 100%;
